--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         </main>
 
-        <!-- <script src="scripts/script.js"></script> -->
+        <script src="scripts/script.js"></script> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
